element of the string argument's yank-handler text property if present.

+++
** New function display-supports-face-attributes-p may be used to test
whether a given set of face attributes is actually displayable.

A new predicate `supports' has also been added to the `defface' face
specification language, which can be used to do this test for faces
defined with defface.

+++
** face-attribute, face-foreground, face-background, and face-stipple now
accept a new optional argument, INHERIT, which controls how face
inheritance is used when determining the value of a face attribute.

+++
** New functions face-attribute-relative-p and merge-face-attribute
help with handling relative face attributes.

+++
** Enhancements to process support

*** Function list-processes now has an optional argument; if non-nil,
only the processes whose query-on-exit flag is set are listed.

*** New set-process-query-on-exit-flag and process-query-on-exit-flag
functions.  The existing process-kill-without-query function is still
supported, but new code should use the new functions.

*** Function signal-process now accepts a process object or process
name in addition to a process id to identify the signalled process.

*** Processes now have an associated property list where programs can
maintain process state and other per-process related information.

The new functions process-get and process-put are used to access, add,
and modify elements on this property list.

The new low-level functions process-plist and set-process-plist are
used to access and replace the entire property list of a process.

???
*** Adaptive read buffering of subprocess output.

On some systems, when emacs reads the output from a subprocess, the
output data is read in very small blocks, potentially resulting in
very poor performance.  This behaviour can be remedied to some extent
by setting the new variable process-adaptive-read-buffering to a
non-nil value (the default), as it will automatically delay reading